--- a/frontend/pages/lesiones.html
+++ b/frontend/pages/lesiones.html
@@ -102,6 +102,7 @@
     </footer>
 
     <script>
+        // Sincroniza número y total de páginas basados en los radios y filas maquetadas.
         document.addEventListener('DOMContentLoaded', () => {
             const radios = Array.from(document.querySelectorAll('.pagination-radio'));
             const pageNumEl = document.querySelector('.pagination-page-num');
