--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
             <div class="logo">
                 <img src="./img/ACG-small-logo.png" alt="Logo ClubGest">
                 <h1 class="sr-only">ClubGest Amateurs</h1>
-                <p>¡Uniendo clubes!</p>
+                <p>¡Uniendo clubs!</p>
             </div>
         </div>
         
@@ -167,8 +167,10 @@
             </div>
 
             <script>
+                // Redirige formularios de registro a la API correcta y manda JSON antes de ir a Home.
                 const API_BASE = window.location.origin.includes('8080') ? '/api' : 'http://localhost:8080/api';
 
+                // Acepta acciones absolutas o relativas y las reescribe hacia API_BASE cuando procede.
                 function normalizarAccion(form) {
                     try {
                         const url = new URL(form.action, window.location.href);
@@ -180,6 +182,7 @@
                     }
                 }
 
+                // Envía con fetch, muestra error legible y navega al home si todo va bien.
                 function manejarEnvio(form) {
                     form.addEventListener('submit', async (e) => {
                         e.preventDefault();
