--- a/frontend/pages/convocatorias.html
+++ b/frontend/pages/convocatorias.html
@@ -100,6 +100,7 @@
     </footer>
 
     <script>
+        // Sincroniza el número de página mostrado con los radios de paginación estática.
         document.addEventListener('DOMContentLoaded', () => {
             const radios = Array.from(document.querySelectorAll('.pagination-radio'));
             const pageNumEl = document.querySelector('.pagination-page-num');
