--- a/frontend/pages/seguros.html
+++ b/frontend/pages/seguros.html
@@ -102,6 +102,7 @@
     </footer>
 
     <script>
+        // Actualiza el indicador de página con los radios y calcula el total según las filas maquetadas.
         document.addEventListener('DOMContentLoaded', () => {
             const radios = Array.from(document.querySelectorAll('.pagination-radio'));
             const pageNumEl = document.querySelector('.pagination-page-num');
