Refactor: Release: v1.0 - merge dev to main

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,217 @@
 <!DOCTYPE html>
-<html>
-    <head>
-       <title>ClubGest</title> 
-    </head>
-    <bod>
-        <h1>ClubGest</h1>
-        <p>Click <a href="./jugador.html">aqui</a> para ver el menu del jugador</p>
-    </bod>
-</html>
+<html lang="es">
+<head>
+    <!-- Configuración básica de la página -->
+    <meta charset="UTF-8"> <!-- Codificación UTF-8: permite acentos, ñ, etc. -->
+    <!-- Viewport: Configura la escala para dispositivos móviles -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Club Gest</title>
+    <link rel="stylesheet" href="css/auth.css">
+    <link rel="icon" type="image/png" href="img/ACG-paint-logo.png">
+</head>
+<body>
+    <!-- Radios ocultos: grupo principal (login / registro) -->
+    <input type="radio" id="tab-login" name="main-tabs" class="tab-radio" checked>
+    <input type="radio" id="tab-registro" name="main-tabs" class="tab-radio">
+    <!-- Radios ocultos: sub-grupo de registro (club / jugador / entrenador) -->
+    <input type="radio" id="tab-club" name="registro-tabs" class="tab-radio" checked>
+    <input type="radio" id="tab-jugador" name="registro-tabs" class="tab-radio">
+    <input type="radio" id="tab-entrenador" name="registro-tabs" class="tab-radio">
+
+    <!-- CONTENEDOR PRINCIPAL: Izquierda + Derecha -->
+    <div class="container">
+        <!-- LADO IZQUIERDO (FIJO)-->
+         <div class="lado-izquierdo">
+            <div class="logo">
+                <img src="./img/ACG-small-logo.png" alt="Logo ClubGest">
+                <h1 class="sr-only">ClubGest Amateurs</h1>
+                <p>¡Uniendo clubs!</p>
+            </div>
+        </div>
+        
+        <!-- LADO DERECHO (CAMBIA SEGÚN TAB SELECCIONADO) -->
+        <div class="lado-derecho">
+
+        <!-- TABS EN LA PARTE SUPERIOR DERECHA -->
+        <div class="tabs">
+            <label for="tab-login" class="tab-btn">Login</label>
+            <label for="tab-registro" class="tab-btn">Registro</label>
+        </div>
+
+        <!-- FORMULARIO LOGIN-->
+         <div class="form-section login-form">
+            <h2>Acceso</h2>
+            <form>
+                <div class="form-group">
+                    <label>Email</label>
+                    <!-- type="email": valida formato automáticamente -->
+                    <!-- required: campo obligatorio (validación HTML5) -->
+                    <input type="email" placeholder="ejemplo@correo.com" required>
+                </div>
+                <div class="form-group">
+                    <label>Contraseña</label>
+                    <!-- type="password": oculta el texto con puntos -->
+                    <input type="password" placeholder="••••••••" required>
+                </div>
+                <!-- type="button" + onclick: redirige sin enviar formulario -->
+                <button type="button" class="btn" onclick="location.href='pages/home.html'">Entrar</button>
+            </form>
+        </div>
+        
+        <!-- OPCIONES REGISTRO (3 botones) -->
+            <div class="form-section registro-opciones">
+                <h2>¿Qué deseas registrar?</h2>
+                <div class="registro-buttons">
+                    <label for="tab-club" class="reg-btn club-btn">Club</label>
+                    <label for="tab-jugador" class="reg-btn jugador-btn">Jugador</label>
+                    <label for="tab-entrenador" class="reg-btn entrenador-btn">Entrenador</label>
+                </div>
+            </div>
+
+            <!-- FORMULARIO CLUB -->
+                <div class="form-section form-registro club-color">
+                <h2>Registrar Club</h2>
+                <form action="http://localhost:8080/api/clubes" method="POST">
+                    <div class="form-group">
+                        <label>Nombre del Club</label>
+                        <input type="text" name="nombre" placeholder="Ej: Club Deportivo XYZ" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Deporte</label>
+                        <input type="text" name="deporte" placeholder="Ej: Fútbol" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Ciudad</label>
+                        <input type="text" name="ciudad" placeholder="Ej: Madrid" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" name="email" placeholder="club@correo.com" required>
+                    </div>
+                    <button type="submit" class="btn">Registrar Club</button>
+                </form>
+            </div>
+
+            <!-- FORMULARIO JUGADOR -->
+            <div class="form-section form-registro jugador-color">
+                <h2>Registrar Jugador</h2>
+                <form action="http://localhost:8080/api/jugadores" method="POST">
+                    <div class="form-group">
+                        <label>Nombre</label>
+                        <input type="text" name="nombre" placeholder="Nombre">
+                    </div>
+                    <div class="form-group">
+                        <label>Apellidos</label>
+                        <input type="text" name="apellidos" placeholder="Apellidos" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" name="email" placeholder="jugador@correo.com">
+                    </div>
+                    <div class="form-group">
+                        <label>Teléfono</label>
+                        <input type="tel" name="telefono" placeholder="600123456">
+                    </div>
+                    <div class="form-group">
+                        <label>Categoría</label>
+                        <input type="text" name="categoria" placeholder="Sub-16">
+                    </div>
+                    <div class="form-group">
+                        <label>Dorsal</label>
+                        <input type="number" name="dorsal" placeholder="10">
+                    </div>
+                    <div class="form-group">
+                        <label>Posición</label>
+                        <input type="text" name="posicion" placeholder="Delantero">
+                    </div>
+                    <div class="form-group">
+                        <label>Fecha de Nacimiento</label>
+                        <input type="date" name="fechaNacimiento" placeholder="dd/mm/aaaa">
+                    </div>
+                    <div class="form-group">
+                        <label>Peso (kg)</label>
+                        <input type="number" name="peso" step="0.1" min="0" placeholder="75.5">
+                    </div>
+                    <button type="submit" class="btn">Registrar Jugador</button>
+                </form>
+            </div>
+
+            <!-- FORMULARIO ENTRENADOR -->
+            <div class="form-section form-registro entrenador-color">
+                <h2>Registrar Entrenador</h2>
+                <form action="http://localhost:8080/api/entrenadores" method="POST">
+                    <div class="form-group">
+                        <label>Nombre</label>
+                        <input type="text" name="nombre" placeholder="Nombre" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Apellidos</label>
+                        <input type="text" name="apellidos" placeholder="Apellidos" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" name="email" placeholder="entrenador@correo.com" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Teléfono</label>
+                        <input type="tel" name="telefono" placeholder="600123456" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Categoría que entrena</label>
+                        <input type="text" name="categoria" placeholder="Sub-18" required>
+                    </div>
+                    <button type="submit" class="btn">Registrar Entrenador</button>
+                </form>
+            </div>
+        </div>
+            </div>
+
+            <script>
+                // Redirige formularios de registro a la API correcta y manda JSON antes de ir a Home.
+                const API_BASE = window.location.origin.includes('8080') ? '/api' : 'http://localhost:8080/api';
+
+                // Acepta acciones absolutas o relativas y las reescribe hacia API_BASE cuando procede.
+                function normalizarAccion(form) {
+                    try {
+                        const url = new URL(form.action, window.location.href);
+                        if (url.pathname.startsWith('/api/')) return url.href;
+                        const endpoint = url.pathname.replace(/^(\/)/, '');
+                        return `${API_BASE}/${endpoint}`;
+                    } catch (e) {
+                        return form.action || API_BASE;
+                    }
+                }
+
+                // Envía con fetch, muestra error legible y navega al home si todo va bien.
+                function manejarEnvio(form) {
+                    form.addEventListener('submit', async (e) => {
+                        e.preventDefault();
+                        const datos = Object.fromEntries(new FormData(form).entries());
+                        const destino = normalizarAccion(form);
+
+                        try {
+                            const resp = await fetch(destino, {
+                                method: form.method || 'POST',
+                                headers: { 'Content-Type': 'application/json' },
+                                body: JSON.stringify(datos)
+                            });
+
+                            if (!resp.ok) {
+                                const msg = (await resp.json().catch(() => ({}))).message || 'Error al registrar';
+                                alert(msg);
+                                return;
+                            }
+
+                            window.location.href = 'pages/home.html';
+                        } catch (error) {
+                            alert('No se pudo conectar con el servidor');
+                        }
+                    });
+                }
+
+                document.addEventListener('DOMContentLoaded', () => {
+                    document.querySelectorAll('.form-section form').forEach(manejarEnvio);
+                });
+            </script>
+        </body>
+        </html>
