feat: añadir campo sexo a tabla jugadores
- Añadida columna sexo (TEXT) con CHECK constraint en tabla jugadores
- Actualizado servicio, controlador y validaciones para soportar campo sexo
- Añadido select de sexo en formulario de registro de jugadores
- Actualizada visualización de fichas para mostrar sexo del jugador
- Recreada base de datos con nueva estructura
- Restricción: sexo solo puede ser 'hombre' o 'mujer'

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,6 +132,14 @@
                         <label>Peso (kg)</label>
                         <input type="number" name="peso" step="0.1" min="0" placeholder="75.5">
                     </div>
+                    <div class="form-group">
+                        <label>Sexo</label>
+                        <select name="sexo">
+                            <option value="">Seleccionar...</option>
+                            <option value="hombre">Hombre</option>
+                            <option value="mujer">Mujer</option>
+                        </select>
+                    </div>
                     <button type="submit" class="btn">Registrar Jugador</button>
                 </form>
             </div>
